qa-workloads/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ibmuiweb
    micro: web-bff
    tier: frontend
  name: ibmuiweb
  namespace: w3beta
spec:
  ports:
  - name: https
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: ibmuiweb
    micro: web-bff
    tier: frontend
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ibmuiweb
    tier: frontend
  name: ibmuiweb
  namespace: w3beta
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.ibmui: glob:1*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ibmuiweb
      micro: web-bff
      tier: frontend
  template:
    metadata:
      labels:
        app: ibmuiweb
        micro: web-bff
        tier: frontend
    spec:
      containers:
      - image: gbs-epricer-next-docker-local.artifactory.swg-devops.com/rc-uat/ibmui:1.0.256
        name: ibmui
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 256Mi
        volumeMounts:
        - mountPath: /IBMWebApp/config/default.json
          subPath: default.json
          name: config-volume
        - mountPath: /IBMWebApp/config/w3config.json
          subPath: w3config.json
          name: secret-volume
        - mountPath: /IBMWebApp/config/ui-config.json
          subPath: ui-config.json
          name: ui-config-volume
      imagePullSecrets:
      - name: artifactory-repo-cred
      volumes:
      - name: config-volume
        configMap:
          name: api-config
      - name: ui-config-volume
        configMap:
          name: ui-config
      - name: secret-volume
        secret:
          secretName: appid-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demoui
    micro: web-bff
    tier: frontend
  name: demoui
  namespace: w3beta
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demoui
    micro: web-bff
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demoui
    tier: frontend
  name: demoui
  namespace: w3beta
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.demoui: glob:1*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoui
      micro: web-bff
      tier: frontend
  template:
    metadata:
      labels:
        app: demoui
        micro: web-bff
        tier: frontend
    spec:
      containers:
      - image: gbs-epricer-next-docker-local.artifactory.swg-devops.com/rc-uat/demoui:1.0.1
        name: demoui
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 96Mi
          requests:
            cpu: 50m
            memory: 32Mi
      imagePullSecrets:
      - name: artifactory-repo-cred
